tests/snapshots/parser__pass_multi_class.snap
---
source: tests/parser.rs
description: "class A {};\n\nclass B inherits A {};\n\nclass C inherits A {};\n\nclass Main {\n    main(): Int {\n        42\n    };\n};\n"
expression: parse_result
---
Ok(Program(
  classes: [
    Class(
      name: TyName(Name(Spanned(
        value: "A",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 6,
            line: 1,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 6,
            line: 1,
            col: 7,
          ),
        ),
      ))),
      inherits: None,
      features: [],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 0,
          line: 1,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 4,
          line: 1,
          col: 5,
        ),
      ),
      ty: Unresolved(Named(TyName(Name(Spanned(
        value: "A",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 6,
            line: 1,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 6,
            line: 1,
            col: 7,
          ),
        ),
      ))))),
    ),
    Class(
      name: TyName(Name(Spanned(
        value: "B",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 19,
            line: 3,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 19,
            line: 3,
            col: 7,
          ),
        ),
      ))),
      inherits: Some(TyName(Name(Spanned(
        value: "A",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 30,
            line: 3,
            col: 18,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 30,
            line: 3,
            col: 18,
          ),
        ),
      )))),
      features: [],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 13,
          line: 3,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 17,
          line: 3,
          col: 5,
        ),
      ),
      ty: Unresolved(Named(TyName(Name(Spanned(
        value: "B",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 19,
            line: 3,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 19,
            line: 3,
            col: 7,
          ),
        ),
      ))))),
    ),
    Class(
      name: TyName(Name(Spanned(
        value: "C",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 43,
            line: 5,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 43,
            line: 5,
            col: 7,
          ),
        ),
      ))),
      inherits: Some(TyName(Name(Spanned(
        value: "A",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 54,
            line: 5,
            col: 18,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 54,
            line: 5,
            col: 18,
          ),
        ),
      )))),
      features: [],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 37,
          line: 5,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 41,
          line: 5,
          col: 5,
        ),
      ),
      ty: Unresolved(Named(TyName(Name(Spanned(
        value: "C",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 43,
            line: 5,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 43,
            line: 5,
            col: 7,
          ),
        ),
      ))))),
    ),
    Class(
      name: TyName(Name(Spanned(
        value: "Main",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 67,
            line: 7,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 70,
            line: 7,
            col: 10,
          ),
        ),
      ))),
      inherits: None,
      features: [
        Method(Method(
          name: Name(Spanned(
            value: "main",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 78,
                line: 8,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 81,
                line: 8,
                col: 8,
              ),
            ),
          )),
          params: [],
          return_ty: TyName(Name(Spanned(
            value: "Int",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 86,
                line: 8,
                col: 13,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 88,
                line: 8,
                col: 15,
              ),
            ),
          ))),
          body: Int(IntLit(Spanned(
            value: 42,
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 100,
                line: 9,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 101,
                line: 9,
                col: 10,
              ),
            ),
          ))),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 78,
              line: 8,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 81,
              line: 8,
              col: 8,
            ),
          ),
          ty: Unresolved(Function(
            args: [],
            ret: Unresolved(Named(TyName(Name(Spanned(
              value: "Int",
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 86,
                  line: 8,
                  col: 13,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 88,
                  line: 8,
                  col: 15,
                ),
              ),
            ))))),
          )),
        )),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 61,
          line: 7,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 65,
          line: 7,
          col: 5,
        ),
      ),
      ty: Unresolved(Named(TyName(Name(Spanned(
        value: "Main",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 67,
            line: 7,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 70,
            line: 7,
            col: 10,
          ),
        ),
      ))))),
    ),
  ],
  span: Span(
    start: Position(
      src: Some(SourceId(1)),
      byte: 0,
      line: 1,
      col: 1,
    ),
    end: Position(
      src: Some(SourceId(1)),
      byte: 4,
      line: 1,
      col: 5,
    ),
  ),
))
