tests/snapshots/parser__pass_priority_assign.snap
---
source: tests/parser.rs
description: "class Main {\n    y : Bool;\n    z : Bool;\n\n    main(): Object {\n        y <- z <- y <- z <- y <- not not true\n    };\n};\n"
expression: parse_result
---
Ok(Program(
  classes: [
    Class(
      name: TyName(Name(Spanned(
        value: "Main",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 6,
            line: 1,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 9,
            line: 1,
            col: 10,
          ),
        ),
      ))),
      inherits: None,
      features: [
        Field(Field(Binding(
          name: Name(Spanned(
            value: "y",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 17,
                line: 2,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 17,
                line: 2,
                col: 5,
              ),
            ),
          )),
          binding_id: SerKey(
            idx: 4294967295,
            version: 1,
          ),
          ty_name: TyName(Name(Spanned(
            value: "Bool",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 21,
                line: 2,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 24,
                line: 2,
                col: 12,
              ),
            ),
          ))),
          init: None,
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 17,
              line: 2,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 17,
              line: 2,
              col: 5,
            ),
          ),
          ty: Unresolved(Named(TyName(Name(Spanned(
            value: "Bool",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 21,
                line: 2,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 24,
                line: 2,
                col: 12,
              ),
            ),
          ))))),
        ))),
        Field(Field(Binding(
          name: Name(Spanned(
            value: "z",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 31,
                line: 3,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 31,
                line: 3,
                col: 5,
              ),
            ),
          )),
          binding_id: SerKey(
            idx: 4294967295,
            version: 1,
          ),
          ty_name: TyName(Name(Spanned(
            value: "Bool",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 35,
                line: 3,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 38,
                line: 3,
                col: 12,
              ),
            ),
          ))),
          init: None,
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 31,
              line: 3,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 31,
              line: 3,
              col: 5,
            ),
          ),
          ty: Unresolved(Named(TyName(Name(Spanned(
            value: "Bool",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 35,
                line: 3,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 38,
                line: 3,
                col: 12,
              ),
            ),
          ))))),
        ))),
        Method(Method(
          name: Name(Spanned(
            value: "main",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 46,
                line: 5,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 49,
                line: 5,
                col: 8,
              ),
            ),
          )),
          params: [],
          return_ty: TyName(Name(Spanned(
            value: "Object",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 54,
                line: 5,
                col: 13,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 59,
                line: 5,
                col: 18,
              ),
            ),
          ))),
          body: Assignment(Assignment(
            name: Name(Spanned(
              value: "y",
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 71,
                  line: 6,
                  col: 9,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 71,
                  line: 6,
                  col: 9,
                ),
              ),
            )),
            binding_id: SerKey(
              idx: 4294967295,
              version: 1,
            ),
            expr: Assignment(Assignment(
              name: Name(Spanned(
                value: "z",
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 76,
                    line: 6,
                    col: 14,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 76,
                    line: 6,
                    col: 14,
                  ),
                ),
              )),
              binding_id: SerKey(
                idx: 4294967295,
                version: 1,
              ),
              expr: Assignment(Assignment(
                name: Name(Spanned(
                  value: "y",
                  span: Span(
                    start: Position(
                      src: Some(SourceId(1)),
                      byte: 81,
                      line: 6,
                      col: 19,
                    ),
                    end: Position(
                      src: Some(SourceId(1)),
                      byte: 81,
                      line: 6,
                      col: 19,
                    ),
                  ),
                )),
                binding_id: SerKey(
                  idx: 4294967295,
                  version: 1,
                ),
                expr: Assignment(Assignment(
                  name: Name(Spanned(
                    value: "z",
                    span: Span(
                      start: Position(
                        src: Some(SourceId(1)),
                        byte: 86,
                        line: 6,
                        col: 24,
                      ),
                      end: Position(
                        src: Some(SourceId(1)),
                        byte: 86,
                        line: 6,
                        col: 24,
                      ),
                    ),
                  )),
                  binding_id: SerKey(
                    idx: 4294967295,
                    version: 1,
                  ),
                  expr: Assignment(Assignment(
                    name: Name(Spanned(
                      value: "y",
                      span: Span(
                        start: Position(
                          src: Some(SourceId(1)),
                          byte: 91,
                          line: 6,
                          col: 29,
                        ),
                        end: Position(
                          src: Some(SourceId(1)),
                          byte: 91,
                          line: 6,
                          col: 29,
                        ),
                      ),
                    )),
                    binding_id: SerKey(
                      idx: 4294967295,
                      version: 1,
                    ),
                    expr: UnOp(UnOpExpr(
                      op: Not,
                      expr: UnOp(UnOpExpr(
                        op: Not,
                        expr: Bool(BoolLit(Spanned(
                          value: true,
                          span: Span(
                            start: Position(
                              src: Some(SourceId(1)),
                              byte: 104,
                              line: 6,
                              col: 42,
                            ),
                            end: Position(
                              src: Some(SourceId(1)),
                              byte: 107,
                              line: 6,
                              col: 45,
                            ),
                          ),
                        ))),
                        span: Span(
                          start: Position(
                            src: Some(SourceId(1)),
                            byte: 100,
                            line: 6,
                            col: 38,
                          ),
                          end: Position(
                            src: Some(SourceId(1)),
                            byte: 102,
                            line: 6,
                            col: 40,
                          ),
                        ),
                        ty: None,
                      )),
                      span: Span(
                        start: Position(
                          src: Some(SourceId(1)),
                          byte: 96,
                          line: 6,
                          col: 34,
                        ),
                        end: Position(
                          src: Some(SourceId(1)),
                          byte: 98,
                          line: 6,
                          col: 36,
                        ),
                      ),
                      ty: None,
                    )),
                    span: Span(
                      start: Position(
                        src: Some(SourceId(1)),
                        byte: 91,
                        line: 6,
                        col: 29,
                      ),
                      end: Position(
                        src: Some(SourceId(1)),
                        byte: 91,
                        line: 6,
                        col: 29,
                      ),
                    ),
                  )),
                  span: Span(
                    start: Position(
                      src: Some(SourceId(1)),
                      byte: 86,
                      line: 6,
                      col: 24,
                    ),
                    end: Position(
                      src: Some(SourceId(1)),
                      byte: 86,
                      line: 6,
                      col: 24,
                    ),
                  ),
                )),
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 81,
                    line: 6,
                    col: 19,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 81,
                    line: 6,
                    col: 19,
                  ),
                ),
              )),
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 76,
                  line: 6,
                  col: 14,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 76,
                  line: 6,
                  col: 14,
                ),
              ),
            )),
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 71,
                line: 6,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 71,
                line: 6,
                col: 9,
              ),
            ),
          )),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 46,
              line: 5,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 49,
              line: 5,
              col: 8,
            ),
          ),
          ty: Unresolved(Function(
            args: [],
            ret: Unresolved(Named(TyName(Name(Spanned(
              value: "Object",
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 54,
                  line: 5,
                  col: 13,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 59,
                  line: 5,
                  col: 18,
                ),
              ),
            ))))),
          )),
        )),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 0,
          line: 1,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 4,
          line: 1,
          col: 5,
        ),
      ),
      ty: Unresolved(Named(TyName(Name(Spanned(
        value: "Main",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 6,
            line: 1,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 9,
            line: 1,
            col: 10,
          ),
        ),
      ))))),
    ),
  ],
  span: Span(
    start: Position(
      src: Some(SourceId(1)),
      byte: 0,
      line: 1,
      col: 1,
    ),
    end: Position(
      src: Some(SourceId(1)),
      byte: 4,
      line: 1,
      col: 5,
    ),
  ),
))
